# zktls-reactnative-core-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ZktlsReactnativeCoreSdk.podspec  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt  NativePrimus.cpp
android/src/main/java/com/zktlsreactnativecoresdk/: ZktlsReactnativeCoreSdkModule.kt  ZktlsReactnativeCoreSdkPackage.kt
android/src/main/java/xyz/primuslabs/algorithm/: NativePrimus.kt  ZktlsReactnativeCoreSdkModule.kt  ZktlsReactnativeCoreSdkPackage.kt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/assets/: index.android.bundle
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ZktlsReactnativeCoreSdkExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ZktlsReactnativeCoreSdkExample.xcodeproj/: project.pbxproj
example/ios/ZktlsReactnativeCoreSdkExample.xcodeproj/xcshareddata/xcschemes/: ZktlsReactnativeCoreSdkExample.xcscheme
example/ios/ZktlsReactnativeCoreSdkExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: PrimusZK.podspec  ZktlsReactnativeCoreSdk.h  ZktlsReactnativeCoreSdk.mm
ios/primus-zk.xcframework/: Info.plist
src/: NativeZktlsReactnativeCoreSdk.ts  assembly_params.ts  index.d.ts  index.tsx  primus_zk.ts  utils.ts
src/classes/: AlgorithmUrls.ts  AttRequest.ts  Error.ts
src/config/: constants.ts  env.ts  error.ts
(+2 files in other folders)
